--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:prettier",
     "lintfix": "prettier --write --list-different .",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "npx nuxt storybook"
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
@@ -26,14 +27,14 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.1.1",
+    "@nuxtjs/storybook": "^4.2.0",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.4",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
-    "sass": "^1.49.7",
-    "sass-loader": "10",
     "vue-jest": "^3.0.4"
   }
 }
